--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,26 +3,34 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-# location of package relative to the repository root (e.g. alternatively "src/my_library")
-# note: the package name 'my_library' can be different from the project name on PyPI
+# location of package relative to the repository root (e.g. alternatively "src/sns_autocalibration")
+# note: the package name 'sns_autocalibration' can be different from the project name on PyPI
 #       the project name (PyPI) is used for pip install, whereas the package name is used for imports
-packages = ["my_library"]  
+packages = ["sns_autocalibration"]  
 
 [tool.hatch.build.targets.sdist]
 exclude = ["notebooks", "tests", "images"]
 
 [project]
-# name on PyPI (e.g. pip install my_library)
-name = "my_library"
+# name on PyPI (e.g. pip install sns_autocalibration)
+name = "sns_autocalibration"
 version = "0.0.1"
 dependencies = [
-    "numpy"
+    "modelskill==1.0.0",
+    "optuna==4.2.1",
+    "ipykernel",
+    "mikeio",
+    "torch",
+    "cartopy",
+    "plotly",
+    "scikit-learn",
+    "nbformat==4.2.0",
 ]
 
 authors = [
-  { name="First Last", email="initials@dhigroup.com" },
+  { name="Faro Schäfer", email="fsch@dhigroup.com" },
 ]
-description = "Useful library"
+description = "A python repository that showcases an approach to automatically calibrate a DHI waterbench model."
 readme = "README.md"
 requires-python = ">=3.9"
 license = {file = "LICENSE"}
@@ -57,8 +65,8 @@ notebooks = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/DHI/my_library"
-"Bug Tracker" = "https://github.com/DHI/my_library/issues"
+"Homepage" = "https://github.com/DHI/sns_autocalibration"
+"Bug Tracker" = "https://github.com/DHI/sns_autocalibration/issues"
 
 
 [tool.ruff]
